2.16 - ?
	- VNDBUtil::bb2html(): Fixed bug when the string starts with a VNDBID
	- Fixed perl warning on /v/search redirect without search query
	- Don't allow NULL for rr.minage and use -1 for unknown
	- Check for editsum = description and give an easier to understand error

2.15 - 2010-12-15
	- Removed expand/collapse from history browser and /u+/posts and switched to
	  a combined view
	- Added a "general discussions" board
	- Added vote listings for VNs and users (/[uv]+/votes)
	- Keep track of last modification date for tag<->vn links
	- Added advanced tag link browser
	- Removed specific tags-by-user listing
	- Disable "Don't update last modified field" by default for mods
	- Make Multi not report posts
	- Consider "senpai" and "sempai" the same in the VN search
	- Extracted screen resolution strings from the code
	- API: Allow extra whitespace after "get .." command
	- API: Allow non-numbers as "clientver" for the login command
	- API: Added "image_nsfw" member to "get vn"
	- API: Added "results" option to the "get .. {}"
	- API: Increased the maximum number of results for the "get" command to 25
	- API: Added "orig_lang" member and filter to the "get vn .." command
	- API: Throttle the commands and sqltime per IP instead of per user
	- API: Removed the limit on the number of open sessions per user
	- API: Allow the API to be used without logging in with a username/password
	- d11: Various documentation fixes and improvements

2.14 - 2010-11-28
	- Improved filter selection interface for the release and VN browser
	- New release filters: voiced, animation and original language
	- New VN filters: length, "has anime" and original language
	- Apply search query and filters when changing first char
	- Added Atom feeds for the recent announcements, changes and posts
	  (located in /www/feeds and updated every 15 min. by Multi::Feed)
	- Re-added producer role to collapsed view on producer pages
	- JS: Reverted to the old selection box date selector